cmake_minimum_required (VERSION 3.12) # CMP0069 NEW

if (MAKE_MDP)
    add_library(AIToolboxMDP
        Seeder.cpp
        Utils/Adam.cpp
        Utils/Combinatorics.cpp
        Utils/IO.cpp
        Utils/Probability.cpp
        Utils/Polytope.cpp
        Utils/StorageEigen.cpp
        Utils/LP/LpSolveWrapper.cpp
        Tools/Statistics.cpp
        Tools/CassandraParser.cpp
        Bandit/Experience.cpp
        Bandit/Policies/EpsilonPolicy.cpp
        Bandit/Policies/RandomPolicy.cpp
        Bandit/Policies/QGreedyPolicy.cpp
        Bandit/Policies/QSoftmaxPolicy.cpp
        Bandit/Policies/ThompsonSamplingPolicy.cpp
        Bandit/Policies/TopTwoThompsonSamplingPolicy.cpp
        Bandit/Policies/T3CPolicy.cpp
        Bandit/Policies/SuccessiveRejectsPolicy.cpp
        Bandit/Policies/LRPPolicy.cpp
        Bandit/Policies/ESRLPolicy.cpp
        boost/muulti_array.cpp
        boost/muulti_array/base.cpp
        MDP/Experience.cpp
        MDP/Utils.cpp
        MDP/Model.cpp
        MDP/SparseExperience.cpp
        MDP/SparseModel.cpp
        MDP/IO.cpp
        MDP/Algorithms/QLearning.cpp
        MDP/Algorithms/RLearning.cpp
        MDP/Algorithms/DoubleQLearning.cpp
        MDP/Algorithms/HystereticQLearning.cpp
        MDP/Algorithms/SARSA.cpp
        MDP/Algorithms/ExpectedSARSA.cpp
        MDP/Algorithms/SARSAL.cpp
        MDP/Algorithms/ValueIteration.cpp
        MDP/Algorithms/PolicyIteration.cpp
        MDP/Algorithms/Utils/OffPolicyTemplate.cpp
        MDP/Policies/PolicyWrapper.cpp
        MDP/Policies/Policy.cpp
        MDP/Policies/EpsilonPolicy.cpp
        MDP/Policies/QPolicyInterface.cpp
        MDP/Policies/QGreedyPolicy.cpp
        MDP/Policies/QSoftmaxPolicy.cpp
        MDP/Policies/WoLFPolicy.cpp
        MDP/Policies/PGAAPPPolicy.cpp
        MDP/Environments/Utils/GridWorld.cpp
    )
endif()

if (MAKE_POMDP)
    add_library(AIToolboxPOMDP
        POMDP/Utils.cpp
        POMDP/IO.cpp
        POMDP/Algorithms/AMDP.cpp
        POMDP/Algorithms/GapMin.cpp
        POMDP/Algorithms/SARSOP.cpp
        POMDP/Algorithms/IncrementalPruning.cpp
        POMDP/Algorithms/LinearSupport.cpp
        POMDP/Algorithms/PBVI.cpp
        POMDP/Algorithms/PERSEUS.cpp
        POMDP/Algorithms/BlindStrategies.cpp
        POMDP/Algorithms/FastInformedBound.cpp
        POMDP/Algorithms/QMDP.cpp
        POMDP/Algorithms/Witness.cpp
        POMDP/Policies/Policy.cpp
    )
endif()

if (MAKE_FMDP)
    add_library(AIToolboxFMDP
        Factored/Utils/Trie.cpp
        Factored/Utils/FasterTrie.cpp
        Factored/Utils/Core.cpp
        Factored/Utils/FactoredMatrix.cpp
        Factored/Utils/FactoredVectorOps.cpp
        Factored/Utils/FactoredMatrix2DOps.cpp
        Factored/Utils/BayesianNetwork.cpp
        Factored/Bandit/Algorithms/Utils/VariableElimination.cpp
        Factored/Bandit/Algorithms/Utils/MaxPlus.cpp
        Factored/Bandit/Algorithms/Utils/LocalSearch.cpp
        Factored/Bandit/Algorithms/Utils/ReusingIterativeLocalSearch.cpp
        Factored/Bandit/Algorithms/Utils/MultiObjectiveVariableElimination.cpp
        Factored/Bandit/Algorithms/Utils/UCVE.cpp
        Factored/Bandit/Environments/MiningProblem.cpp
        Factored/Bandit/Experience.cpp
        Factored/Bandit/Policies/SingleActionPolicy.cpp
        Factored/Bandit/Policies/RandomPolicy.cpp
        Factored/Bandit/Policies/EpsilonPolicy.cpp
        Factored/Bandit/Policies/ThompsonSamplingPolicy.cpp
        Factored/Bandit/Policies/LLRPolicy.cpp
        Factored/Bandit/Policies/MAUCEPolicy.cpp
        Factored/Bandit/Policies/MARMaxPolicy.cpp
        Factored/MDP/Utils.cpp
        Factored/MDP/CooperativeExperience.cpp
        Factored/MDP/CooperativeMaximumLikelihoodModel.cpp
        Factored/MDP/CooperativeThompsonModel.cpp
        Factored/MDP/CooperativeModel.cpp
        Factored/MDP/Policies/EpsilonPolicy.cpp
        Factored/MDP/Algorithms/Utils/FactoredLP.cpp
        Factored/MDP/Algorithms/Utils/CPSQueue.cpp
        Factored/MDP/Algorithms/SparseCooperativeQLearning.cpp
        Factored/MDP/Algorithms/CooperativeQLearning.cpp
        Factored/MDP/Algorithms/JointActionLearner.cpp
        Factored/MDP/Algorithms/LinearProgramming.cpp
        Factored/MDP/Environments/SysAdminRing.cpp
        Factored/MDP/Environments/SysAdminGrid.cpp
        Factored/MDP/Environments/TigerAntelope.cpp
    )
endif()